--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint": "^8.23.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "vite": "^3.0.0"
   }
 }
